# nlp_workspace

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/: pull_request_template.md
.github/workflows/: tests.yml
tests/: test_placeholder.py
