[tool.poetry]
name = "py_template"
version = "0.1.0"
description = ""
authors = ["Yuuri Kurashima <kurashimayuuri@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
autoflake = "^1.4"
flake8 = "^4.0.1"
flake8-isort = "^4.1.1"
flake8-quotes = "^3.3.1"
flake8-print = "^4.0.0"
isort = "^5.10.1"
black = {extras = ["jupyter"], version = "^22.6.0"}
pytest = "^7.1.0"
pytest-cov = "^3.0.0"
pytest-env = "^0.6.2"
pytest-profiling = "^1.7.0"
pytest-randomly = "^3.11.0"
pytest-timeout = "^2.1.0"
pytest-xdist = "^2.5.0"
tqdm = "^4.63.0"

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.black]
skip-string-normalization = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
